@@ -1,0 +1,14 @@
+<!-- See https://bugs.launchpad.net/zope.pagetemplate/+bug/732972 -->
+<ul>
+ <li>root</li>
+ <li>
+ <ul>
+ <li>first</li>
+</ul>
+ </li>
+ <li>
+ <ul>
+ <li>second</li>
+</ul>
+ </li>
+</ul>
